# Maestro-Orquestrator

./: .gitignore  COMMIT_HISTORY.md  PLANEJAMENTO_FASE1.md  PLANEJAMENTO_FASE2.md  PLANEJAMENTO_MACRO.md  maestro_planning_and_architecture.md
control-plane/: README.md  pyproject.toml
control-plane/src/: bot.py  database.py  main.py  models.py  schemas.py  seed.py  ws_handler.py
control-plane/src/routers/: agents.py  automations.py  jobs.py
web-app/: package-lock.json  package.json
web-app/src/app/: globals.css  layout.tsx  page.tsx
web-app/src/app/dashboard/: layout.tsx  page.tsx
web-app/src/app/dashboard/agents/: page.tsx
web-app/src/app/dashboard/automations/: page.tsx
web-app/src/app/dashboard/calendar/: page.tsx
web-app/src/app/dashboard/console/: page.tsx
web-app/src/app/dashboard/jobs/: page.tsx
web-app/src/app/dashboard/reports/: page.tsx
web-app/src/app/dashboard/settings/: page.tsx
web-app/src/app/features/: page.tsx
web-app/src/app/login/: Login.module.css  page.tsx
web-app/src/app/presentation/: page.tsx
web-app/src/app/pricing/: page.tsx
web-app/src/app/register/: page.tsx
web-app/src/components/: FeatureCard.module.css  FeatureCard.tsx  Hero.module.css  Hero.tsx  NewAutomationModal.tsx  RunAutomationModal.tsx  TerminalModal.module.css  TerminalModal.tsx
web-app/src/theme/: ThemeRegistry.tsx
worker-agent/: README.md  pyproject.toml
worker-agent/src/: main.py
