[project]
name = "control-plane"
version = "0.1.0"
description = "Control Plane para o Agendador Inteligente (Maestro)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "python-telegram-bot>=21.1.1",
    "botbuilder-core>=4.15.0",
    "pydantic-settings>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
