[project]
name = "worker-agent"
version = "0.1.0"
description = "Worker Headless (Agente) para o Agendador Inteligente (Maestro)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "psutil>=5.9.8",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
